test: admin verification
